--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/Details.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Manage/Details.cshtml
@@ -12,12 +12,12 @@
 
     <div class="champ">
         <label>@Html.DisplayNameFor(m => m.Email)</label>
-        <p>@Html.DisplayFor(model => model.Email)</p>
+        <p>@Html.DisplayFor(m => m.Email)</p>
     </div>
 
     <div class="champ">
-        <label>@Html.DisplayNameFor(m => m.roles)</label>
-        <p>@Html.DisplayFor(m => m.roles)</p>
+        <label>@Html.DisplayNameFor(m => m.rolesWrap)</label>
+        <p>@Html.DisplayFor(m => m.rolesWrap)</p>
     </div>
 
     <div class="champ">
