--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using ApplicationPlanCadre.Models
-@model LoginViewModel
+﻿@model ApplicationPlanCadre.Models.LoginViewModel
+
 @{
     ViewBag.Title = "Portail";
     Layout = null;
@@ -18,29 +18,35 @@
 </head>
 <body>
 
-@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
+@using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { role = "form" }))
 {
+    @Html.AntiForgeryToken()
+
     <section id="portail" class="container-fluid">
         <div id="main" class="col-md-4 col-md-offset-8 col-sm-6 col-sm-offset-6">
             <div class="login">
-                <img class="logo" src="~/Content/Images/portail-logo.png" />
-                    
-                @Html.AntiForgeryToken()
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Email, new { @class = "col-xs-3 control-label" })
-                    <div class="col-xs-9">
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control bright" })
-                        @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
-                    </div>
-                </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "col-xs-3 control-label" })
-                    <div class="col-xs-9">
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control bright" })
-                        @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                <img class="logo" src="~/Content/Images/portail-logo.png" />
+                
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+                <div class="row">
+                    <div class="col-xs-10 col-xs-offset-1">
+
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Email)
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control bright" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(m => m.Password)
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control bright" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+
                     </div>
+
                 </div>
 
                 <div class="form-group">
@@ -71,7 +77,4 @@
 @Scripts.Render("~/bundles/jquery")
 @Scripts.Render("~/bundles/bootstrap")
 
-<script>
-    document.getElementById('portail').style.backgroundImage = "url(../Content/Images/cegep2.jpg)"
-    document.getElementById('main').style.backgroundImage = "url(../Content/Images/cegep2-frost.jpg)"
-</script>
+<script src="@Url.Content("~/Scripts/portail.js")"></script>
