--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Account/Register.cshtml
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-md-8">
 
-                    <header>
+                    <header class="light-header">
 
                         <h1>@ViewBag.Title</h1>
 
@@ -93,64 +93,6 @@
     </div>
 }
 
-<script>
-
-    initDropDown();
-
-    function initDropDown() {
-        var selectList = document.getElementById('roles');
-        var option = document.createElement("option");
-        option.text = "Selectionnez un rôle";
-        selectList.insertBefore(option, selectList.firstChild);
-        optionEnabled(0, false);
-        dropDownDefault();
-    }
-
-    function dropDownDefault() {
-        document.getElementById('roles').selectedIndex = "0";
-    }
-
-    function optionEnabled(index, state) {
-        document.getElementById("roles").options[index].disabled = !state;
-    }
-
-    function RCPFormVisible(state) {
-        if (state)
-            document.getElementById("RCPForm").style.display = "block";
-        else
-            document.getElementById("RCPForm").style.display = "none";
-    }
-
-    function checkRCP(option, state) {
-        if (option.value == 1)
-            RCPFormVisible(state);
-    }
-
-    function addRole() {
-        var selectList = document.getElementById('roles');
-        var option = selectList.options[selectList.selectedIndex];
-        document.getElementById("rolesBox").innerHTML += buildChildHtml(option.text, option.value);
-        optionEnabled(selectList.selectedIndex, false);
-        checkRCP(option, true);
-        dropDownDefault();
-    }
-
-    function buildChildHtml(nom, index) {
-        var id = "role" + index;
-        return html =
-            "<div id='" + id + "'class='child-field clearfix'>" +
-                "<p>" + nom + "</p>" +
-                "<span  onclick='removeRole(" + id + ")' class='glyphicon glyphicon-remove'></span>" +
-                "<input type='hidden' name='roles' value='" + nom + "' />" +
-            "</div>";
-    }
-
-    function removeRole(id) {
-        var roleNode = document.getElementById(id);
-        var option = document.getElementById('roles').options[id + 1];
-        checkRCP(option, false);
-        optionEnabled(id + 1, true);
-        roleNode.remove();
-    }
-
-</script>
+@section scripts {
+    <script src="@Url.Content("~/Scripts/roleSelect.js")"></script>
+}
