--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleDevisMinistere/Edit.cshtml
@@ -10,42 +10,43 @@
     @Html.HiddenFor(model => model.idDevis)
 
     <div class="container">
-        <div class="form-box row">
+        <div class="form-box">
+            <div class="row">
 
-            <header>
+                <header class="light-header">
 
-                <h1>@ViewBag.Title</h1>
+                    <h1>@ViewBag.Title</h1>
 
-            </header>
+                </header>
 
-            <div class="col-md-8">
+                <div class="col-md-8">
 
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                    @Html.ValidationMessage("Duplique", new { @class = "text-danger" })
 
-                <div class="form-group">
-                    @Html.LabelFor(m => m.codeProgramme)
-                    @Html.DropDownList("codeProgramme", null, new { @class = "form-control" })
-                    @Html.ValidationMessageFor(m => m.codeProgramme, "", new { @class = "text-danger" })
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.codeProgramme)
+                        @Html.DropDownList("codeProgramme", null, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.codeProgramme, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.annee)
+                        @Html.TextBoxFor(m => m.annee, new { @class = "form-control small", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" })
+                        @Html.ValidationMessageFor(m => m.annee, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group">
+                        @Html.LabelFor(m => m.codeSpecialisation)
+                        @Html.TextBoxFor(m => m.codeSpecialisation, new { @class = "form-control small", @maxlength = 2 })
+                        @Html.ValidationMessageFor(m => m.codeSpecialisation, "", new { @class = "text-danger" })
+                    </div>
+
+                    <input type="submit" value="Confirmer" class="fancy-button" />
+                    <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
+
                 </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(m => m.annee)
-                    @Html.TextBoxFor(m => m.annee, new { @class = "form-control small", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" })
-                    @Html.ValidationMessageFor(m => m.annee, "", new { @class = "text-danger" })
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(m => m.codeSpecialisation)
-                    @Html.TextBoxFor(m => m.codeSpecialisation, new { @class = "form-control small", @maxlength = 2 })
-                    @Html.ValidationMessageFor(m => m.codeSpecialisation, "", new { @class = "text-danger" })
-                </div>
-
-                <input type="submit" value="Confirmer" class="fancy-button" />
-                <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
-
             </div>
-
         </div>
     </div>
 }
