--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Create.cshtml
@@ -1,56 +1,54 @@
 ﻿@model ApplicationPlanCadre.Models.Programme
 
 @{
-    ViewBag.Title = "Console d'administration";
+    ViewBag.Title = "Gestion des programmes";
 }
 
-<div class="container">
+@using (Html.BeginForm("Create", "ConsoleProgramme", FormMethod.Post))
+{
+    @Html.AntiForgeryToken()
 
-    <div class="horizontal-form">
+    <div class="container">
+        <div class="form-box">
 
-        @using (Html.BeginForm("Create", "ConsoleProgramme", FormMethod.Post))
-        {
-            @Html.AntiForgeryToken()
+            <header class="light-header">
 
-            <div class="form-horizontal form-box">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <h1>@ViewBag.Title</h1>
 
-                <h3>Ajouter un programme</h3>
-                <hr />
+            </header>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.idDevis, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.DropDownList("idDevis", null, htmlAttributes: new { @class = "form-control" })
-                        @Html.ValidationMessageFor(model => model.idDevis, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.nom, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.nom, new { htmlAttributes = new { @class = "form-control col-md-6", @maxlength = 50 } })
-                        @Html.ValidationMessageFor(model => model.nom, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+            <div class="field-box">
+                <div class="row">
+                    <div class="col-md-8">
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.annee, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-6">
-                        @Html.EditorFor(model => model.annee, new { htmlAttributes = new { @class = "form-control small-input", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" } })
-                        @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.idDevis)
+                            @Html.DropDownList("idDevis", null, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.idDevis, "", new { @class = "text-danger" })
+                        </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-3 col-md-9">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.nom)
+                            @Html.TextBoxFor(model => model.nom, new { @class = "form-control", @maxlength = 50 })
+                            @Html.ValidationMessageFor(model => model.nom, "", new { @class = "text-danger" })
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.annee)
+                            @Html.TextBoxFor(model => model.annee, new { @class = "form-control small", @maxlength = 4, @onkeydown = "return (!(event.keyCode>=65) && event.keyCode!=32);" })
+                            @Html.ValidationMessageFor(model => model.annee, "", new { @class = "text-danger" })
+                        </div>
+
                         <input type="submit" value="Enregistrer" class="fancy-button" />
+
                     </div>
                 </div>
             </div>
-        }
 
+            @Html.Action("_PartialList")
+
+        </div>
     </div>
-
-    @Html.Action("_PartialList")
-</div>
+}
