--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/_PartialList.cshtml
@@ -1,56 +1,54 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.Programme>
 
-<div class="crud-list">
-    <table>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.nom)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.annee)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.idDevis)
-            </th>
-            <th class="action-cell-header">
-                <b>Modifier</b>
-            </th>
-            <th class="action-cell-header">
-                <b>Supprimer</b>
-            </th>
-        </tr>
+<table class="cool-table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.nom)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.annee)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.idDevis)
+        </th>
+        <th class="action-cell-header">
+            <b>Modifier</b>
+        </th>
+        <th class="action-cell-header">
+            <b>Supprimer</b>
+        </th>
+    </tr>
 
-        @foreach (var item in Model)
-        {
-            bool valide = item.PlanCadre.Count() == 0;
-            string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idProgramme }) : @Url.Action("Create");
-            <tr ondblclick="location.href='@dblclickEvent'">
-                <td>
-                    @Html.DisplayFor(modelItem => item.nom)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.annee)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.nom)
-                </td>
-                <td class="action-cell">
-                    @if (valide)
-                    {
-                        <a href='@Url.Action("Edit", new { idProgramme = item.idProgramme })'>
-                            <span class="glyphicon glyphicon-pencil"><!----></span>
-                        </a>
-                    }
-                </td>
-                <td class="action-cell">
-                    @if(valide)
-                    {
-                        <a href='@Url.Action("DeleteConfirmed", new { idProgramme = item.idProgramme })'>
-                            <span class="glyphicon glyphicon-trash"><!----></span>
-                        </a>
-                    }
-                </td>
-            </tr>
-        }
-    </table>
-</div>
+    @foreach (var item in Model)
+    {
+        bool valide = item.PlanCadre.Count() == 0;
+        string dblclickEvent = valide ? Url.Action("Edit", new { id = item.idProgramme }) : @Url.Action("Create");
+        <tr ondblclick="location.href='@dblclickEvent'">
+            <td>
+                @Html.DisplayFor(modelItem => item.nom)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.annee)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.DevisMinistere.nom)
+            </td>
+            <td class="action-cell">
+                @if (valide)
+                {
+                    <a href='@Url.Action("Edit", new { idProgramme = item.idProgramme })'>
+                        <span class="glyphicon glyphicon-pencil"><!----></span>
+                    </a>
+                }
+            </td>
+            <td class="action-cell">
+                @if(valide)
+                {
+                    <a href='@Url.Action("DeleteConfirmed", new { idProgramme = item.idProgramme })'>
+                        <span class="glyphicon glyphicon-trash"><!----></span>
+                    </a>
+                }
+            </td>
+        </tr>
+    }
+</table>
