--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/_TreeView.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/_TreeView.cshtml
@@ -1,7 +1,6 @@
 ﻿@model IEnumerable<ApplicationPlanCadre.Models.Programme>
 
-<div id="tree-view">
-    @*
+<div class="tree-view">
     <div class="tree-view-header">Programme</div>
     @foreach (var programme in Model)
     {
@@ -47,7 +46,7 @@
                                 string enc_item = enc_id + "item";
                                 string enc_target = "#" + enc_id;
                                 <div id=@enc_item class="tree-view-item">
-                                    @if (planCadre.PlanCadreElement.Where(m => m.ElementCompetence.EnonceCompetence.idCompetence == planCadreEnonce.idCompetence).Count() > 0)
+                                    @if (planCadreEnonce.PlanCadreElement.Count() > 0)
                                     {
                                         <div class="collapse-button" data-toggle="collapse" data-target=@enc_target><span class="glyphicon glyphicon-chevron-right"><!----></span></div> }
                                     else
@@ -61,7 +60,7 @@
                                 <div id=@enc_id class="collapse">
                                     <div class="tree-view-item-container">
                                         <div class="tree-view-header">Éléments de compétence</div>
-                                        @foreach (var planCadreElement in planCadreEnonce.GetPlanCadreElements())
+                                        @foreach (var planCadreElement in planCadreEnonce.PlanCadreElement)
                                         {
                                             string el_item = "el" + planCadreElement.idElement.ToString() + "item";
                                             <div id=@el_item class="tree-view-item">
@@ -79,5 +78,9 @@
 
         </div>
     }
-    *@
 </div>
+
+<script src="@Url.Content("~/Scripts/perfect-scrollbar.js")"></script>
+<script>
+    var ps = new PerfectScrollbar('.tree-view');
+</script>
