--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/ConsoleProgramme/Edit.cshtml
@@ -47,6 +47,7 @@
                 <div class="col-md-offset-3 col-md-9">
                     <input type="submit" value="Confirmer" class="fancy-button" />
                     <a href='@Url.Action("Create")' class="fancy-button rouge">Annuler</a>
+                    <a href='@Url.Action("Valider", new { idProgramme = Model.idProgramme})' class="fancy-button">Valider</a>
                 </div>
             </div>
         </div>
