correction section plan cadre demander par carl  (modifier-> option)  et ajout header en haut de la liste de plan cadre

--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Index.cshtml
@@ -20,7 +20,7 @@
                 </a>
             }
             <hr />
-            <h1>Modification</h1>
+            <h1>Option</h1>
             <a class="fancy-button rouge" onclick="location.href='@Url.Action("Pedagogie", "Accueil")'">Retour</a>
 
         </div>
