--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
@@ -7,24 +7,31 @@
 @Html.Action("_TreeView")
 
 <div class="super-view">
-    
-    <div class="container-fluid info-display">
-        <div id="info-detail">
-            <h1>Liste des plans cadres</h1>
 
-            @foreach (var planCadre in Model.PlanCadre)
-            {
-                <a class="info-child clearfix" href='@Url.Action("info", "PlanCadre", new { idPlanCadre = planCadre.idPlanCadre })'>
-                    <p class="gauche">@Html.DisplayFor(ec => planCadre.titreCours)</p>
-                    <p class="droite">@Html.DisplayFor(model => planCadre.Programme.idProgramme)-@Html.DisplayFor(model => planCadre.Programme.annee)-@Html.DisplayFor(model => planCadre.Programme.DevisMinistere.codeSpecialisation)</p>
-                </a>
-            }
+    <header class="fat-header">
 
-            <hr />
-            <h1>Modification</h1>
-            <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {idProgramme = Model.idProgramme})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
-            <a class="fancy-button rouge" onclick="location.href='@Url.Action("Index", "Programme")'">Retour</a>
+        <h1>Programme</h1>
 
-        </div>
-    </div>
+        <h2>@Html.DisplayFor(model => model.description)</h2>
+        <h3>@Html.DisplayFor(model => model.DevisMinistere.EnteteProgramme.codeProgramme)-@Html.DisplayFor(model => model.annee)-@Html.DisplayFor(model => model.DevisMinistere.codeSpecialisation)</h3>
+
+    </header>
+
+    <h2>Liste des plans cadres</h2>
+
+    @foreach (var planCadre in Model.PlanCadre)
+    {
+        <a class="info-child clearfix" href='@Url.Action("info", "PlanCadre", new { idPlanCadre = planCadre.idPlanCadre })'>
+            <p class="gauche">@Html.DisplayFor(ec => planCadre.titreCours)</p>
+            <p class="droite">@Html.DisplayFor(model => planCadre.numeroCours)</p>
+        </a>
+    }
+
+    <hr />
+
+    <h2>Option</h2>
+
+    <a class="fancy-button" href='@Url.Action("Create", "PlanCadre", new {idProgramme = Model.idProgramme})'><span class="glyphicon glyphicon-plus"><!----></span> Ajouter un plan cadre</a>
+    <a class="fancy-button rouge" onclick="location.href='@Url.Action("Index", "Programme")'">Retour</a>
+
 </div>
