--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/table.css
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Content/table.css
@@ -1,6 +1,5 @@
 ﻿table.cool-table {
     width: 100%;
-    padding: 15px;
     color: #fff;
 }
 
@@ -48,4 +47,32 @@ table.cool-table .action-cell {
     width: 10%;
     text-align: center;
     border-left: 1px solid #707070;
+}
+
+/*PLANCADRE*/
+
+table.plan-cadre-table {
+    margin: 0 -40px;
+    width: calc(100% + 80px);
+}
+
+table.plan-cadre-table th, table.plan-cadre-table td {
+    padding: 10px;
+    vertical-align: top;
+    border-left: 1px solid;
+}
+
+table.plan-cadre-table tr th:first-child, table.plan-cadre-table tr td:first-child {
+    border-left: none;
+}
+
+table.plan-cadre-table th {
+    background-color: #ddd;
+    border-bottom: 5px solid;
+    border-color: #bcbcbc;
+}
+
+table.plan-cadre-table td {
+    border-bottom: 1px solid;
+    border-color: #ddd;
 }
