--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Programme/Info.cshtml
@@ -19,7 +19,7 @@
 
     </header>
 
-    <h2>Liste des plans cadres</h2>
+    <h2>Plans cadres</h2>
 
     @foreach (var planCadre in Model.PlanCadre)
     {
@@ -37,3 +37,7 @@
     <a class="fancy-button rouge" onclick="location.href='@Url.Action("Index", "Programme")'">Retour</a>
 
 </div>
+
+<script>
+    $(("#p" + @Model.idProgramme + "item")).addClass('active');
+</script>
