--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/Rapport/RapportProgramme.cshtml
@@ -38,9 +38,10 @@
                 text-align:left;
                 
         }
-       .pdf{
-           margin-top:100px;
-        }
+    .pdf {
+        margin-top: 100px;
+        font-family: Calibri;
+    }
 
         table { page-break-before:auto }
         tr    { page-break-inside:avoid; page-break-after:always; }
