--- a/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
+++ b/Sprint 2/Code/ApplicationPlanCadre/ApplicationPlanCadre/Views/recherche/_afficherRecherche.cshtml
@@ -5,8 +5,9 @@
     ViewBag.Title = "afficherRech";
 }
 <style>
-    p{
-        font-size:20px;
+    p {
+        font-size: 20px;
+        font-family: Calibri;
     }
 </style>
 
@@ -26,7 +27,7 @@
             {
                 <h2>Énoncer Compétence</h2>
                 <hr />
-                foreach (SecondaryEnonceCompetence enonceCmpt in Model.EnonceCompetence)
+                foreach (SearchEnonceCompetence enonceCmpt in Model.EnonceCompetence)
                 {
                     <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = enonceCmpt.idCompetence })">
                         <p>@Html.Raw(enonceCmpt.codeCompetence)</p>
@@ -41,7 +42,7 @@
                 {
                     <h2>Élément Compétence</h2>
                     <hr />
-                    foreach (SecondaryElementCompetence elementCompt in Model.ElementCompetence)
+                    foreach (SearchElementCompetence elementCompt in Model.ElementCompetence)
                     {
                         <a class="info-child clearfix" href="@Url.Action("Info","ElementCompetence", new { idElement = elementCompt.idElement })">
                             <p>@Html.Raw(elementCompt.description)</p>
@@ -55,7 +56,7 @@
                 {
                 <h2>Devis ministériel</h2>
                 <hr />
-                    foreach (SecondaryDevisMinistere devis in Model.DevisMinistere)
+                    foreach (SearchDevisMinistere devis in Model.DevisMinistere)
                     {
                     <a class="info-child clearfix" href="@Url.Action("Info","DevisMinistere", new { idDevis = devis.idDevis })">
                         <p>@Html.Raw(devis.annee)</p>
@@ -77,7 +78,7 @@
 
 
 
-                        foreach (SecondaryContexteRealisation contexteReal in Model.ContexteRealisation)
+                        foreach (SearchContexteRealisation contexteReal in Model.ContexteRealisation)
                         {
 
                             <a class="info-child clearfix" href="@Url.Action("Info","EnonceCompetence", new { idCompetence = contexteReal.idCompetence})">
